k8s-configs/ping-cloud/test/pingdataconsole/deployment.yaml
# This defines the ping data console deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingdataconsole
spec:
  replicas: 1
  template:
    metadata:
      name: pingdataconsole
      annotations:
        lastUpdateTime: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingdataconsole
        image: pingidentity/pingdataconsole:2406-10.0.0.2
        ports:
        - containerPort: 8080
          name: http
